--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
+.idea/codeStyles/
+.idea/dbnavigator.xml
 
 # Gradle
 .idea/**/gradle.xml
